Edited description mechanism per event + UUID + ACKflag

--- a/netsimulation/client-server/Makefile
+++ b/netsimulation/client-server/Makefile
@@ -4,8 +4,8 @@ LD=gcc
 AR=ar
 
 # FLAGS #
-CFLAGS=-Wall -Wmissing-prototypes
-LDFLAGS=
+CFLAGS=-Wall -Wmissing-prototypes -luuid
+LDFLAGS=-luuid
 
 # CONFIGURATION FILE #
 EXEC=fake_switch
