working hello world function

--- a/Protocol/src/Makefile
+++ b/Protocol/src/Makefile
@@ -18,7 +18,7 @@ all: $(EXEC) $(EXEC2) $(RLEASE)
 $(EXEC): fake_switch.o client.o log.o linkedlist.o
 	$(LD) -o ../netsimulation/$(EXEC) fake_switch.o client.o linkedlist.o log.o $(LDFLAGS)
 $(EXEC2): server.o lambda_server.o
-	$(CPP) -o ../netsimulation/$(EXEC2) server.o lambda_server.o $(LDFLAGS)
+	$(CPP) -o ../netsimulation/$(EXEC2) server.o lambda_server.o $(LDFLAGS) -L/usr/lib -lssl -lcrypto
 	$(MAKE) $(RLEASE)
 
 client.o: client.c client.h common.h
@@ -33,8 +33,8 @@ fake_switch.o: fake_switch.c
 
 server.o: Server.cpp Server.h
 	$(CPP) -c Server.cpp -o server.o $(CFLAGS) -std=c++14
-lambda_server.o: lambda.cpp
-	$(CPP) -c lambda.cpp -o lambda_server.o $(CFLAGS) -std=c++14
+lambda_server.o: lambda.cpp httplib.h
+	$(CPP) -c lambda.cpp -L/usr/lib -lssl -lcrypto -o lambda_server.o $(CFLAGS) -std=c++14
 
 release:
 	cp -f ../netsimulation/lambda_server ../../XDP-Code/netsimulation
